# copytrading

./: .env.example  .gitignore  README.md  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
openspec/: config.yaml
openspec/changes/: README.md
openspec/changes/archive/2026-06-03-bootstrap-tooling/: archive-report.md  design.md  state.yaml  tasks.md  verify-report.md
openspec/changes/archive/2026-06-08-web-dashboard/: proposal.md
openspec/changes/bootstrap-tooling/: proposal.md
openspec/changes/core-infrastructure/: design.md  proposal.md  tasks.md
openspec/changes/core-infrastructure/specs/config/: spec.md
openspec/changes/core-infrastructure/specs/google-sheets-client/: spec.md
openspec/changes/core-infrastructure/specs/paper-trading/: spec.md
openspec/changes/web-dashboard/: design.md  tasks.md  verify-report.md
openspec/specs/: README.md
openspec/specs/storage/: spec.md
scripts/: seed_test_db.py
src/copytrading/: __init__.py  config.py  leaderboard_scraper.py  models.py  poly_client.py  risk.py  sheets_client.py  store.py
src/copytrading/cronjobs/: account_tracker.py  leaderboard_discovery.py  position_copier.py
src/copytrading/web/: __init__.py  __main__.py  app.py  encoders.py  formatting.py  routes.py
src/copytrading/web/templates/: base.html  index.html
tests/: conftest.py  test_smoke.py
tests/unit/: test_config.py  test_leaderboard_discovery.py  test_models.py  test_poly_client.py  test_position_copier.py  test_risk.py  test_sheets_client.py  test_store.py  test_web.py  test_web_decimal_encoder.py
(+18 files in other folders)
